# CanvasMCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  azure-deploy.yml  claude-desktop-config-local.json  claude-desktop-config-test.json  claude-desktop-config.json  clean_fix_api_modules.py  cloud-run.yaml  cloudrun-deploy.sh  deploy.sh  fix_api_modules.py  pyproject.toml  run-dev.sh  test_mcp_server.py
azure/: Dockerfile  azure-deploy.yml  deploy.sh
src/: analytics_middleware.py  index.py  session_manager.py  session_middleware.py
src/analytics/: __init__.py  analytics_client.py  error_sanitizer.py
src/canvasAPI/: __init__.py  account_calendars.py  base.py  courses.py
src/canvasAPI/accountDomainLookup/: __init__.py  accountDomainLookups.py
src/canvasAPI/announcement/: __init__.py  announcements.py
src/canvasAPI/assignment/: __init__.py  assignment_extensions.py  assignment_groups.py  assignments.py
src/canvasAPI/authenticationProvider/: __init__.py  authenticationProviders.py
src/canvasAPI/calendar/: __init__.py  account_calendars.py
src/canvasAPI/contentMigration/: contentMigration.py
src/canvasAPI/conversation/: __init__.py  conversations.py
src/canvasAPI/course/: __init__.py  courses.py
src/canvasAPI/discussionTopic/: __init__.py  discussionTopics.py
src/resources/: content_creation_rules.py
src/tools/: __init__.py  assignments.py  base.py  canvasGuides.py  contentMigration.py  courses.py  discussionTopics.py  files.py  getToken.py  modules.py  pages.py  quizzes.py
src/utils/: __init__.py  helpers.py
(+21 files in other folders)
