[project]
name = "canvasmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.4",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jwt>=1.4.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "mcp[cli]>=1.11.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
